--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         id: hello
         uses: octocat/hello-world-javascript-action@v1.1
         with:
-          who-to-greet: 'Robert Judal Regalado'
+          who-to-greet: 'Robert Regalado'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
